--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -21,4 +21,11 @@
     box-shadow: none
   &:active, &:focus 
     outline: none
-
+.title
+  display: flex
+  justify-content: center
+  font-family: 'Rubik-Bold'
+  font-style: normal
+  font-weight: bold
+  font-size: 36px
+  line-height: 43px
