--- a/sass/media.sass
+++ b/sass/media.sass
@@ -1,7 +1,9 @@
 @media  screen and (min-width : 992px) and (max-width : 1365px)
   .main
-    padding-left: 50px
+    padding-left: 10px
 @media  screen and (min-width : 768px) and (max-width : 991px)
+  section
+    margin-top: 111px
   .main
     height: 100vh
     text-align: center
@@ -20,6 +22,27 @@
       margin-left: 29px
   .logo
     margin-left: 7px
+  .service
+    &__paw 
+      top: -93px
+      right: -32px
+      width: 32%
+  .cards
+    margin-top: 50px
+  .card
+    width: 324px
+    min-height: 285px
+    padding: 25px
+    margin-bottom: 28px
+    &__img
+      width: 75px
+      height: 75px
+    &__title
+      font-size: 20px
+      margin-top: 23px
+    &__text
+      font-size: 15px
+      width: 262px
 @media  screen and (min-width : 320px) and (max-width : 767px)
   .header 
     height: 62px
@@ -138,3 +161,28 @@
     &__hotel
       font-size: 16px
       padding-top: 9px
+  section
+    margin-top: 59px
+  .title
+    font-size: 28px
+  .service
+    &__paw 
+      top: -11px
+      right: -11px
+      width: 30%
+  .cards
+    margin-top: 28px
+  .card
+    width: 290px
+    max-height: 289px
+    padding: 25px
+    margin-bottom: 25px
+    &__img
+      width: 60px
+      height: 60px
+    &__title
+      font-size: 18px
+      margin-top: 25px
+    &__text
+      font-size: 15px
+      width: 218px
