--- a/css/media.css
+++ b/css/media.css
@@ -1,8 +1,10 @@
 @media screen and (min-width: 992px) and (max-width: 1365px) {
   .main {
-    padding-left: 50px; } }
+    padding-left: 10px; } }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
+  section {
+    margin-top: 111px; }
   .main {
     height: 100vh;
     text-align: center;
@@ -18,7 +20,27 @@
   .nav__item {
     margin-left: 29px; }
   .logo {
-    margin-left: 7px; } }
+    margin-left: 7px; }
+  .service__paw {
+    top: -93px;
+    right: -32px;
+    width: 32%; }
+  .cards {
+    margin-top: 50px; }
+  .card {
+    width: 324px;
+    min-height: 285px;
+    padding: 25px;
+    margin-bottom: 28px; }
+    .card__img {
+      width: 75px;
+      height: 75px; }
+    .card__title {
+      font-size: 20px;
+      margin-top: 23px; }
+    .card__text {
+      font-size: 15px;
+      width: 262px; } }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
@@ -170,4 +192,28 @@
     font-size: 44px; }
   .content__hotel {
     font-size: 16px;
-    padding-top: 9px; } }
+    padding-top: 9px; }
+  section {
+    margin-top: 59px; }
+  .title {
+    font-size: 28px; }
+  .service__paw {
+    top: -11px;
+    right: -11px;
+    width: 30%; }
+  .cards {
+    margin-top: 28px; }
+  .card {
+    width: 290px;
+    max-height: 289px;
+    padding: 25px;
+    margin-bottom: 25px; }
+    .card__img {
+      width: 60px;
+      height: 60px; }
+    .card__title {
+      font-size: 18px;
+      margin-top: 25px; }
+    .card__text {
+      font-size: 15px;
+      width: 218px; } }
